@@ -1,9 +1,12 @@
 DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v6r1-3.9.patch1 2982 SHA256 ec99a25471dddd6c860762ab3895f94c07181e25f5d4785c66422fff8328cf40 SHA512 62f1830edb1b5b54c27289e81d309a516ac5bfd5ee7b6b75f77ea8b083b8776d928cf068fa87cd776fad550cff836e1260d2618bd678a37a88972a5d2c0274a2 WHIRLPOOL d303f8e51b456c6c657953f52d5107d6e1a09541210d1ad742aaf9d60494c6587329aecf7828b4417c2f3cf6bd62d51d843af959aa123f4a8a4886112a743ca1
 DIST 0002-block-introduce-the-BFQ-v6r1-I-O-sched-for-3.9.patch1 169564 SHA256 53a4db3514254fb4ef7c6232e1b6aa2c82818df89660fe16f772b472bff332f1 SHA512 b566f1d5f6b0da64a0a0a02b2fa58d643216636b5046eaac535af5c66213ff5ec895b7c19e1f7e98406d46dfcc2142d43fb695b116248fb0ea938e923732ccc8 WHIRLPOOL f12a09fcb2ea55d6a13c0a4d8de7423024c46b9f79e46dbfddc2a30a73bf00e74b7c91de5c7dd7aaa72a413cd986588bd5ccf96b27f7966107ba959c265119e5
 DIST README-3.9.5.BFQ 9583 SHA256 88e76c5a8259b63c4534b9e154309cff2318f80506cbf469c7c8dff97474d4d5 SHA512 29e4f505eff76e2318fbecf0a7dc3f539103e2c1220e1445be1b7aa3872ea9fe3fbdb95a5cffb728ddc45bea5239a88c81d4d116b122dc795b59443c83549ca0 WHIRLPOOL 178000ac40952b903839a23d92e443be7c11ae262d674ea6f827d6eb49e28868f63bbf1eae1eb42e5eaec869504f5fc6d9c23937ac9b33e868059267b328edc5
+DIST README-3.9.6.BFQ 9583 SHA256 88e76c5a8259b63c4534b9e154309cff2318f80506cbf469c7c8dff97474d4d5 SHA512 29e4f505eff76e2318fbecf0a7dc3f539103e2c1220e1445be1b7aa3872ea9fe3fbdb95a5cffb728ddc45bea5239a88c81d4d116b122dc795b59443c83549ca0 WHIRLPOOL 178000ac40952b903839a23d92e443be7c11ae262d674ea6f827d6eb49e28868f63bbf1eae1eb42e5eaec869504f5fc6d9c23937ac9b33e868059267b328edc5
 DIST aufs-sources-3.9_p20130520.tar.xz 145724 SHA256 04796f643635c5eb021d0193fa4b4ba624c88946962cf9977b5d7725d2063a41 SHA512 615852a86be94650d6ce70a0e390ce468748c469691d280fa257f51e94ae64d523bd0e5fa47570fc0fe460324ef7141fc0e7aac49d1b034618cc8e45a28b87b6 WHIRLPOOL e2c1c08deaf21930d3b710ce70f724e140596595547391bdefe3d30ef1f79d7dd2d7a32970c83bbc471370cf7a3f8c1650e70bf7153b857ac0c7cf6ead712635
 DIST deblob-3.9 116031 SHA256 0fb17070d5aaf226fca39f70df68b7d482e4f803e0ef974626440a28c26b5dc3 SHA512 e014add3728dc3fa0b938f3849ccba60e82354a811eefe6761036aa5e5b7bda39960758bb918506ed3cd0758360729144304227ab2cc3f5489813204f0053d3d WHIRLPOOL 4e65c3a6ba5dd5d850567fcd347167245b527b098ffa390bf0e9fb9778ddb06cd48553f697e2fe7cb793714b520dbb5b90b9948a339663a315e299272aca09ef
 DIST deblob-check-3.9 557345 SHA256 60d05db20e7b50919ca44487d05e8faa9cca830318bd8d96625f0f75b252eeed SHA512 6b857380d495261c4d356639157f99f3ca3412388fd3b1c72b566c3bb6453c5a22ab7716e3b24e64a9b63dab912b07baccccfd0fca806ac0e0620efeef777b6a WHIRLPOOL 877c2c9b813466f9aa5cfecdc9ab93247bd2cdead457c9e0bd97da49d042d0a52262f9b4f8e9c83e397b57c5bb5a8fe2b61bb5f44d5a178a579cc9fff990941a
+DIST genpatches-3.9-10.base.tar.xz 175032 SHA256 70fdd2a3019b01be0aea5b09aa3ca03a2af0ea0240da1a5345e4ba047ea8314c SHA512 af831b5c6ca860292be6d10ddd394dbaa7edb4193c6f1f4f2813a8605a6e71d31cfa2398116cc38e049448d372d95851717b1d58fb7634e4161601b768b03dcd WHIRLPOOL f55f3d3fa25d15764d549293abeb2606f94c3f8bcaae5bc5f8cb7df15609e0db54dfc1a658bc80f5212d70bd1000f4fde75e73877b533415a7c5c7553e668ea6
+DIST genpatches-3.9-10.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
 DIST genpatches-3.9-9.base.tar.xz 155404 SHA256 db446d34c2d6c64da36e4196a3dd98424006b6abad3bcb3382b36d6380e41508 SHA512 7199a17e251ba6b71ed7d63a1ea57cec8c601b49e7f4f5559d1ab12ae57147fea2bd971af653dd7120f66804accec6d7281b9ea3891d80af5387b0a487d79f72 WHIRLPOOL 5971198fb42661599879e9c0cb9b034897c7e154efd0a8c95e9d1296f62bdc61747ac979cad6f9201c1c342c5a155a5041dac4591f2329c11a51a3685789f860
 DIST genpatches-3.9-9.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
 DIST lh-logo_linux_clut224.ppm 213668 SHA256 cf2ffc266799f3948131c30fe72870ff03afe9010643cc5a1c7b36cd1fe80562 SHA512 95b2a9b21f9125e178e32447f2310983427b37ffd4a861ce145d57e7daa828a38e51641069cdd191f4f2b303a887ae5b93ab0a40290a7976302683d633cdb315 WHIRLPOOL d0e693f86e964661090774350bdc4621f184bce20c7ad1e2fa62a941894feca5b709029a8f1ae398ca3f190f1eacd8c0e072f82e589cbae3dc2da565acca2297
